Se agrega MUI para trabajo de componentes, se adaptan colores a template, se configura grilla basica en panel de Clientes

--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
     <link href="css/animate.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
 	
-    <title>Rekit React App</title>
+    <title>Brokfy Dashboard</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
