--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Web site created using create-react-app" />
+    <meta name="description" content="Dashboard para la gestión interna de Brokfy" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 	
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
